# Spider_XHS

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt
apis/: xhs_creator_apis.py  xhs_creator_login_apis.py  xhs_pc_apis.py  xhs_pc_login_apis.py  xhs_pugongying_apis.py  xhs_qianfan_apis.py
openspec/changes/archive/: 2026-07-08-xhshow-pc-risk-control-enhancement.md
openspec/changes/archive/2026-07-01-add-pc-cookie-facade/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-01-add-pc-cookie-facade/specs/pc-cookie-facade/: spec.md
openspec/changes/archive/2026-07-23-harden-xhs-pc-session/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-23-harden-xhs-pc-session/specs/pc-cookie-facade/: spec.md
openspec/changes/archive/2026-07-23-harden-xhs-pc-session/specs/pc-request-session/: spec.md
openspec/specs/pc-cookie-facade/: spec.md
openspec/specs/pc-request-session/: spec.md
spider_xhs/: __init__.py  errors.py  pc.py
static/: __init__.py
tests/: raw_data.json  raw_note.json  scratch_extract.py  scratch_extract_img.py  scratch_extract_video.py  test_http_client.py  test_pc_facade.py  test_pc_transport.py  test_search_limit.py  test_video_download.py  test_xhshow_adapter.py
xhs_utils/: common_util.py  data_util.py  http_client.py  xhs_creator_util.py  xhs_pugongying_util.py  xhs_util.py  xhshow_adapter.py
